rbac-kubeconfig-and-admission-control/assets/checkout-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-service
  namespace: production-ops
  labels:
    app: checkout-service
    team: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-service
  template:
    metadata:
      labels:
        app: checkout-service
    spec:
      containers:
        - name: checkout-service
          image: nginx:1.25
