rbac-kubeconfig-and-admission-control/assets/ci-deployer-rbac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pipelines-ops
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: nginx:1.25
